--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -2,4 +2,7 @@
 
 <p>Hi! Try one of the following API's now:</p>
 
-<a href="http://localhost:3001">Chess-API</a>
+<h2>api-chess</h2>
+
+<a href="http://localhost/api/chess">GET /</a>
+<a href="http://localhost/api/chess/game">GET /game</a>
